error
void	get_map_dimensions(t_map	*map)
{
	size_t	i;

	i = 0;
	map->cols = ft_strlen(map->map[0]);
	while(map->map[i] != NULL)
		i++;
	map->rows = i;
}


src/verify_map.c: In function ‘get_map_dimensions’:
src/verify_map.c:30:12: error: assignment to ‘size_t *’ {aka ‘long unsigned int *’} from ‘size_t’ {aka ‘long unsigned int’} makes pointer from integer without a cast [-Werror=int-conversion]
   30 |  map->cols = ft_strlen(map->map[0]);
      |            ^
src/verify_map.c:33:12: error: assignment to ‘size_t *’ {aka ‘long unsigned int *’} from ‘size_t’ {aka ‘long unsigned int’} makes pointer from integer without a cast [-Werror=int-conversion]
   33 |  map->rows = i;
      |            ^
cc1: all warnings being treated as errors
